<resources>
    <string name="app_name">ZeroNote</string>
    <string name="login_title">从零开始，记录你想留住的全部</string>
    <string name="login_btn">登  录</string>
    <string name="login_mobile">  [这里写着刚才输入的邮箱或号码]</string>
    <string name="login_password">  密码</string>
    <string name="dont_have_account">没有账户？</string>
    <string name="create_account">创建新账户</string>
    <string name="prompt">记住你自己的密码这里没有记住密码这个选项！[○･｀Д´･ ○]</string>
    <string name="register_username">请输入昵称</string>
    <string name="register_mobile">请输入电话号码或者邮箱</string>
    <string name="register_password">请输入设置密码</string>
    <string name="register_password_again">再次确认设置密码</string>
    <string name="register_btn">注册并开始使用笔记</string>
    <string name="main_label">所有笔记</string>
    <string name="search">查找</string>
    <string name="select_note">选择笔记</string>
    <string name="add_desktop">添加到手机主屏</string>
    <string name="sort_type">排序方式</string>
    <string name="view_options">查看选项</string>
    <string name="setting">设置</string>
    <string name="all_note">所有笔记</string>
    <string name="note_book">笔记本</string>
    <string name="share_note">共享笔记</string>
    <string name="rubbish">回收站</string>
    <string name="user_test">这是用户名用户名</string>
    <string name="mobile_test">这是绑定邮箱或电话号码</string>
    <string name="exit">再按一次退出程序</string>
    <string name="add_note_article">在想什么呢～</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
