<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_note"
            android:icon="@drawable/file_black"
            android:title="@string/all_note" />
        <item
            android:id="@+id/note_book"
            android:icon="@drawable/books"
            android:title="@string/note_book" />
        <item
            android:id="@+id/share_note"
            android:icon="@drawable/share"
            android:title="@string/share_note" />
        <item
            android:id="@+id/rubbish"
            android:icon="@drawable/rubbish"
            android:title="@string/rubbish" />
    </group>


</menu>
