<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#89434e"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="www.lovingrabbit.com.zeronote.LoginActivity">
    <ImageView
        android:id="@+id/register_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="left"
        android:src="@drawable/back" />
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#89434e"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="180dp" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_title"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/login_title"
            android:layout_gravity="center"
            android:textColor="#f3f8f9"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="#f3f8f9">
        <EditText
            android:layout_marginTop="40dp"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:id="@+id/register_username"
            android:hint="@string/register_username"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyEditText" />

        <EditText
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:id="@+id/register_mobile"
            android:hint="@string/register_mobile"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyEditText" />
        <EditText
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:id="@+id/register_password"
            android:inputType="textPassword"
            android:hint="@string/register_password"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyEditText" />
        <EditText
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:id="@+id/register_password_again"
            android:hint="@string/register_password_again"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyEditText" />
        <Button
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sharp"
            android:textColor="#fbfbf7"
            android:textSize="18sp"
            android:text="@string/register_btn" />
    </LinearLayout>
</LinearLayout>
