<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#89434e"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lovingrabbit.www.zeronote.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#89434e"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="200dp" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_title"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/login_title"
            android:layout_gravity="center"
            android:textColor="#fbfbf7"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="#f3f8f9">

        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/login_mobile"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyEditText" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/login_password"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyEditText" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sharp"
            android:textColor="#fbfbf7"
            android:textSize="18sp"
            android:text="@string/login_btn" />

    </LinearLayout>

</LinearLayout>
